# planning_abstraction_net

./: CMakeLists.txt  README.md  package.xml
data_sets/: simulated_test_data_set.txt
include/planning_abstraction_net/: data_serializer.h  height_map_generator_abstr_learning.h  heuristic_server.h  planner.h  priority_queue_discr_pose.h  robot_pose.h  training_data_generator.h
launch/: planning_framework.launch
scripts/: abstraction_learning_CNN.py  abstraction_learning_dataset.py  abstraction_learning_ros_interface.py  abstraction_learning_training.py
src/: data_serializer.cpp  height_map_generator_abstr_learning.cpp  heuristic_server.cpp  planner.cpp  priority_queue_discr_pose.cpp  training_data_generator.cpp
srv/: GetBatchAbstraction.srv  GetPathCosts.srv  SetMapCrops.srv
